base/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-mysql
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-mysql
  template:
    metadata:
      labels:
        app: petclinic-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-mysql
  namespace: petclinic
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: petclinic-mysql
